// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays share modal 1`] = `
<div>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
    shareDisabled={false}
  />
  <ShareModal
    handleToggle={[Function]}
    open={true}
    query={
      Object {
        "filters": Array [],
        "from": "1970-01-01T00:00:00Z",
        "range": "day",
        "to": "1970-01-02T00:00:00Z",
      }
    }
  />
</div>
`;

exports[`renders filters, hydrates with filters from query string, and requests data 1`] = `
<div>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
    shareDisabled={false}
  />
  <ShareModal
    handleToggle={[Function]}
    open={false}
    query={
      Object {
        "filters": Array [],
        "from": "1970-01-01T00:00:00Z",
        "range": "day",
        "to": "1970-01-02T00:00:00Z",
      }
    }
  />
</div>
`;
